--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ header {
   header .menu-icon {
     position: absolute;
     top: 7px;
-    right: 8px;
+    right: 5%;
     margin: 0 auto;
     width: 47px;
     height: 41px;
