--- a/scss/main-page/_header.scss
+++ b/scss/main-page/_header.scss
@@ -87,7 +87,7 @@ header {
     .menu-icon {
     position: absolute;
     top: 7px;
-    right: 8px;
+    right: 8%;
     margin: 0 auto;
     width: 47px;
     height: 41px;
